--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -3,16 +3,22 @@
 
   <head>
     <title></title>
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="js/notes.js" defer></script>
   </head>
 
   <body>
-    <div class="note-selectors">
-      <div class="note-selector" v-for="note in notes">
-        <p class="note-selector-title">{{ note.body }}</p>
-        <p class="note-selector-timestamp">{{ note.timestamp }}</p>
+    <div id="app">
+
+      <div class="note-selectors">
+        <div class="note-selector" v-for="note in transformNotes(notes)">
+          <p class="note-selector-title">
+            {{ formatTitle(note.body) }}
+          </p>
+          <p class="note-selector-timestamp">
+            {{ formatTimestamp(note.timestamp) }}
+          </p>
+        </div>
       </div>
+
     </div>
   </body>
 
