Redefined TransformNotes from method to computed property.

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -9,7 +9,7 @@
     <div id="app">
 
       <div class="note-selectors">
-        <div class="note-selector" v-for="note in transformNotes(notes)">
+        <div class="note-selector" v-for="note in transformedNotes">
           <p class="note-selector-title">
             {{ formatTitle(note.body) }}
           </p>
