--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -11,10 +11,10 @@
       <div class="note-selectors">
         <div class="note-selector" v-for="note in transformedNotes">
           <p class="note-selector-title">
-            {{ formatTitle(note.body) }}
+            {{ note.body | formatTitle }}
           </p>
           <p class="note-selector-timestamp">
-            {{ formatTimestamp(note.timestamp) }}
+            {{ note.timestamp | formatTimestamp }}
           </p>
         </div>
       </div>
