--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <title></title>
+    <title>Notes</title>
   </head>
 
   <body>
     <div id="app">
-
       <div class="note-selectors">
         <div class="note-selector"
           v-for="note in transformedNotes"
@@ -22,8 +20,14 @@
           </p>
         </div>
       </div>
-
+      <div class="note-editor">
+        <p class="note-editor-info">
+          {{ selectedNote.timestamp | formatTimestamp }}
+        </p>
+        <textarea class="note-editor-input">
+          {{ selectedNote.body }}
+        </textarea>
+      </div>
     </div>
   </body>
-
 </html>
