--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -24,9 +24,7 @@
         <p class="note-editor-info">
           {{ selectedNote.timestamp | formatTimestamp }}
         </p>
-        <textarea class="note-editor-input">
-          {{ selectedNote.body }}
-        </textarea>
+        <textarea class="note-editor-input" v-model="selectedNote.body"></textarea>
       </div>
     </div>
   </body>
