--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -6,6 +6,11 @@
 
   <body>
     <div id="app">
+      <div class="toolbar">
+        <button class="toolbar-button" v-on:click="createNote()">
+          New
+        </button>
+      </div>
       <div class="note-selectors">
         <div class="note-selector"
           v-for="note in transformedNotes"
