Make v-on:click Delete button

--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -10,6 +10,9 @@
         <button class="toolbar-button" v-on:click="createNote()">
           New
         </button>
+        <button class="toolbar-button" v-on:click="deleteNote()">
+          Delete
+        </button>
       </div>
       <div class="note-selectors">
         <div class="note-selector"
