--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -7,12 +7,9 @@
   <body>
     <div id="app">
       <div class="toolbar">
-        <button class="toolbar-button" v-on:click="createNote()">
-          New
-        </button>
-        <button class="toolbar-button" v-on:click="deleteNote()">
-          Delete
-        </button>
+        <button class="toolbar-button" v-on:click="createNote()">New</button>
+        <button class="toolbar-button" v-on:click="deleteNote()">Delete</button>
+        <input class="toolbar-search" type="text" placeholder="Search..." v-model="searchNoteText">
       </div>
       <div class="note-selectors">
         <div class="note-selector"
